# documents

./: axum-sqlx.md  docker-memo.md  docker-memo.txt  example.zshrc  github-memo.md  macos-setting.md  nginx-docker.md  postgres-docker.md  setup-macos-sequoia.md  svelte-vite.md  tailwindcss-vite.md
axum-example/: README.md
axum-example/1-hello-world/: Cargo.toml
axum-example/1-hello-world/src/: main.rs
axum-example/2-json-example/: Cargo.toml
axum-example/2-json-example/src/: main.rs
axum-example/3-axum-error-handling/: Cargo.toml
axum-example/3-axum-error-handling/src/: main.rs
axum-example/4-axum-cmd-line/: Cargo.toml
axum-example/4-axum-cmd-line/htdocs/: index.html
axum-example/4-axum-cmd-line/htdocs/js/: index.js
axum-example/4-axum-cmd-line/src/: args.rs  main.rs
container/base-development/.devcontainer/: Dockerfile  compose.yml
container/base-development/workspace/: READEME.md
container/make-linedra-dic/: README.md  build-dic.sh  dockerfile
container/node-development/.devcontainer/: Dockerfile  compose.yml  devcontainer.json
container/node-development/workspace/: READEME.md
container/rust-development/.devcontainer/: Dockerfile  Dockerfile.1.79  compose.yml  devcontainer.json
container/rust-development/workspace/: READEME.md
devcontainer-base/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
devcontainer-rust/.devcontainer/: Dockerfile  compose.yml  devcontainer.json  docker-compose.yml
devcontainer-rust/workspace/: READEME.md
wezterm-settings/: keybinds.lua  readme.md  wezterm.lua
