[package]
name = "axum-cmd-line"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
bpaf = { version = "0.9.15", default-features = false, features = ["derive"] }
tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
codegen-units = 1
panic = "abort"

# cargo +nightly-2024-10-17 build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target aarch64-unknown-linux-gnu --release
# upx --best --lzma ./target/aarch64-unknown-linux-gnu/release/axum-cmd-line
